# ai-hedge-fund

./: README.md  pyproject.toml
src/llm/: models.py
