[tool.black]
line-length = 420
target-version = ['py39']
include = '\.pyi?$'
[project]
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = "<4.0,>=3.9"
dependencies = [
    "langchain==0.3.0",
    "langchain-anthropic==0.3.5",
    "langchain-groq==0.2.3",
    "langchain-openai==0.3",
    "langchain-ollama>=0.1",
    "langgraph==0.2.56",
    "pandas<3.0.0,>=2.1.0",
    "numpy<2.0.0,>=1.24.0",
    "python-dotenv==1.0.0",
    "matplotlib<4.0.0,>=3.9.2",
    "tabulate<1.0.0,>=0.9.0",
    "colorama<1.0.0,>=0.4.6",
    "questionary<3.0.0,>=2.1.0",
    "rich<14.0.0,>=13.9.4",
    "ollama>=0.4"
]
name = "ai-hedge-fund"
version = "0.1.0"
description = "An AI-powered hedge fund that uses multiple agents to make trading decisions"
readme = "README.md"

[dependency-groups]
dev = [
    "pytest<8.0.0,>=7.4.0",
    "black<24.0.0,>=23.7.0",
    "isort<6.0.0,>=5.12.0",
    "flake8<7.0.0,>=6.1.0",
]
